set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)

add_executable(new_target
        MbDCode.cpp 
        Abs.cpp
        AbsConstraint.cpp
        AccICKineNewtonRaphson.cpp
        AccICNewtonRaphson.cpp
        AccKineNewtonRaphson.cpp
        AccNewtonRaphson.cpp
        AngleJoint.cpp
        AngleZIecJec.cpp
        AngleZIeqcJec.cpp
        AngleZIeqcJeqc.cpp
        AnyGeneralSpline.cpp
        AnyPosICNewtonRaphson.cpp
        ArcTan.cpp
        ArcTan2.cpp
        Array.cpp
        ASMTAnimationParameters.cpp
        ASMTAssembly.cpp
        ASMTConstantGravity.cpp
        ASMTConstraintSet.cpp
        ASMTCylindricalJoint.cpp
        ASMTExtrusion.cpp
        ASMTFixedJoint.cpp
        ASMTForceTorque.cpp
        ASMTGeneralMotion.cpp
        ASMTItem.cpp
        ASMTItemIJ.cpp
        ASMTJoint.cpp
        ASMTKinematicIJ.cpp
        ASMTMarker.cpp
        ASMTMotion.cpp
        ASMTPart.cpp
        ASMTPointInPlaneJoint.cpp
        ASMTPrincipalMassMarker.cpp
        ASMTRefCurve.cpp
        ASMTRefItem.cpp
        ASMTRefPoint.cpp
        ASMTRefSurface.cpp
        ASMTRevoluteJoint.cpp
        ASMTRotationalMotion.cpp
        ASMTSimulationParameters.cpp
        ASMTSpatialContainer.cpp
        ASMTSpatialItem.cpp
        ASMTSphericalJoint.cpp
        ASMTTime.cpp
        ASMTTranslationalMotion.cpp
        ASMTTranslationalJoint.cpp
        ASMTUniversalJoint.cpp
        AtPointConstraintIJ.cpp
        AtPointConstraintIqcJc.cpp
        AtPointConstraintIqcJqc.cpp
        AtPointConstraintIqctJqc.cpp
        AtPointJoint.cpp
        BasicIntegrator.cpp
        BasicQuasiIntegrator.cpp
        BasicUserFunction.cpp
        CADSystem.cpp
        CartesianFrame.cpp
        CompoundJoint.cpp
        Constant.cpp
        ConstantGravity.cpp
        ConstantVelocityJoint.cpp
        Constraint.cpp
        ConstraintIJ.cpp
        ConstVelConstraintIJ.cpp
        ConstVelConstraintIqcJc.cpp
        ConstVelConstraintIqcJqc.cpp
        Cosine.cpp
        CREATE.cpp
        CylindricalJoint.cpp
        CylSphJoint.cpp
        DifferentiatedGeneralSpline.cpp
        EndFrameqct2.cpp
        EulerAngles.cpp
        EulerAnglesDDot.cpp
        EulerAnglesDot.cpp
        Exponential.cpp
        ExternalSystem.cpp
        FunctionFromData.cpp
        FunctionXcParameter.cpp
        FunctionXY.cpp
        GeneralSpline.cpp
        Ln.cpp
        Log10.cpp
        LogN.cpp
        Negative.cpp
        PosVelAccData.cpp
        DiagonalMatrix.cpp
        DifferenceOperator.cpp
        DirectionCosineConstraintIJ.cpp
        DirectionCosineConstraintIqcJc.cpp
        DirectionCosineConstraintIqcJqc.cpp
        DirectionCosineConstraintIqctJqc.cpp
        DirectionCosineIecJec.cpp
        DirectionCosineIeqcJec.cpp
        DirectionCosineIeqcJeqc.cpp
        DirectionCosineIeqctJeqc.cpp
        DiscontinuityError.cpp
        DispCompIecJecIe.cpp
        DispCompIecJecKec.cpp
        DispCompIecJecKeqc.cpp
        DispCompIecJecO.cpp
        DispCompIeqcJecIe.cpp
        DispCompIeqcJecKeqc.cpp
        DispCompIeqcJecO.cpp
        DispCompIeqcJeqcIe.cpp
        DispCompIeqcJeqcKeqc.cpp
        DispCompIeqcJeqcKeqct.cpp
        DispCompIeqcJeqcO.cpp
        DispCompIeqctJeqcIe.cpp
        DispCompIeqctJeqcKeqct.cpp
        DispCompIeqctJeqcO.cpp
        DistanceConstraintIJ.cpp
        DistanceConstraintIqcJc.cpp
        DistanceConstraintIqcJqc.cpp
        DistanceConstraintIqctJqc.cpp
        DistancexyConstraintIJ.cpp
        DistancexyConstraintIqcJc.cpp
        DistancexyConstraintIqcJqc.cpp
        DistIecJec.cpp
        DistIeqcJec.cpp
        DistIeqcJeqc.cpp
        DistIeqctJeqc.cpp
        DistxyIecJec.cpp
        DistxyIeqcJec.cpp
        DistxyIeqcJeqc.cpp
        DistxyIeqctJeqc.cpp
        EndFramec.cpp
        EndFrameqc.cpp
        EndFrameqct.cpp
        EulerAngleszxz.cpp
        EulerAngleszxzDDot.cpp
        EulerAngleszxzDot.cpp
        EulerArray.cpp
        EulerConstraint.cpp
        EulerParameters.cpp
        EulerParametersDDot.cpp
        EulerParametersDot.cpp
        ExpressionX.cpp
        FixedJoint.cpp
        ForceTorqueData.cpp
        ForceTorqueItem.cpp
        FullColumn.cpp
        FullMatrix.cpp
        FullMotion.cpp
        FullRow.cpp
        Function.cpp
        FunctionWithManyArgs.cpp
        FunctionX.cpp
        GearConstraintIJ.cpp
        GearConstraintIqcJc.cpp
        GearConstraintIqcJqc.cpp
        GearJoint.cpp
        GEFullMat.cpp
        GEFullMatFullPv.cpp
        GEFullMatParPv.cpp
        GESpMat.cpp
        GESpMatFullPv.cpp
        GESpMatFullPvPosIC.cpp
        GESpMatParPv.cpp
        GESpMatParPvMarko.cpp
        GESpMatParPvMarkoFast.cpp
        GESpMatParPvPrecise.cpp
        ICKineIntegrator.cpp
        IndependentVariable.cpp
        InLineJoint.cpp
        InPlaneJoint.cpp
        Integrator.cpp
        IntegratorInterface.cpp
        Item.cpp
        Joint.cpp
        KineIntegrator.cpp
        KinematicIeJe.cpp
        LDUFullMatParPv.cpp
        LDUSpMat.cpp
        LDUSpMatParPv.cpp
        LDUSpMatParPvMarko.cpp
        LDUSpMatParPvPrecise.cpp
        LinearMultiStepMethod.cpp
        LineInPlaneJoint.cpp
        MarkerFrame.cpp
        Math.cpp
        MatrixDecomposition.cpp
        MatrixGaussElimination.cpp
        MatrixLDU.cpp
        MatrixSolver.cpp
        MaximumIterationError.cpp
        NewtonRaphson.cpp
        NewtonRaphsonError.cpp
        NoRotationJoint.cpp
        NotKinematicError.cpp
        Numeric.cpp
        OrbitAnglezIecJec.cpp
        OrbitAnglezIeqcJec.cpp
        OrbitAnglezIeqcJeqc.cpp
        Orientation.cpp
        ParallelAxesJoint.cpp
        Part.cpp
        PartFrame.cpp
        PerpendicularJoint.cpp
        PlanarJoint.cpp
        PointInLineJoint.cpp
        PointInPlaneJoint.cpp
        PosICKineNewtonRaphson.cpp
        PosICNewtonRaphson.cpp
        PosKineNewtonRaphson.cpp
        PosNewtonRaphson.cpp
        Power.cpp
        PrescribedMotion.cpp
        Product.cpp
        QuasiIntegrator.cpp
        RackPinConstraintIJ.cpp
        RackPinConstraintIqcJc.cpp
        RackPinConstraintIqcJqc.cpp
        RackPinJoint.cpp
        Reciprocal.cpp
        RedundantConstraint.cpp
        RevCylJoint.cpp
        RevoluteJoint.cpp
        RowTypeMatrix.cpp
        ScalarNewtonRaphson.cpp
        ScrewConstraintIJ.cpp
        ScrewConstraintIqcJc.cpp
        ScrewConstraintIqcJqc.cpp
        ScrewJoint.cpp
        SimulationStoppingError.cpp
        Sine.cpp
        SingularMatrixError.cpp
        Solver.cpp
        SparseColumn.cpp
        SparseMatrix.cpp
        SparseRow.cpp
        SparseVector.cpp
        SphericalJoint.cpp
        SphSphJoint.cpp
        StableBackwardDifference.cpp
        LDUFullMat.cpp
        StateData.cpp
        Sum.cpp
        Symbolic.cpp
        SymbolicParser.cpp
        SyntaxError.cpp
        System.cpp
        SystemNewtonRaphson.cpp
        SystemSolver.cpp
        Time.cpp
        TooManyTriesError.cpp
        TooSmallStepSizeError.cpp
        Translation.cpp
        TranslationalJoint.cpp
        TranslationConstraintIJ.cpp
        TranslationConstraintIqcJc.cpp
        TranslationConstraintIqcJqc.cpp
        TranslationConstraintIqctJqc.cpp
        Units.cpp
        UniversalJoint.cpp
        UserFunction.cpp
        Variable.cpp
        FullVector.cpp
        VectorNewtonRaphson.cpp
        VelICKineSolver.cpp
        VelICSolver.cpp
        VelKineSolver.cpp
        VelSolver.cpp
        ZRotation.cpp
        ZTranslation.cpp
)


